app: ujs: add 'hashviz' lib, use on error pages
generate a visual hash from input text

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -153,6 +153,7 @@
 @import views/home
 @import views/relationships
 @import views/export
+@import views/errors
 
 /* Extra
  *-----------------------------------------
