--- a/app/views/errors/server_error.haml
+++ b/app/views/errors/server_error.haml
@@ -11,15 +11,23 @@
           = title
 
       .ui-modal-body.by-center
-        .error-message
-          %p.paragraph-l
-            = details.first
-          %p.title-xs-alt
-            = details.second
-          %p.title-xs-alt
-            - details.drop(2).flatten.uniq.each do |line|
-              = line
-              %br/
+        .row
+          .bang.col1of6
+            = component('icon.bang')
+
+          .error-message.col4of6{data: { hashviz_target: 'errvis' }}
+            %p.paragraph-l
+              = details.first
+            %p.title-xs-alt
+              = details.second
+            %p.title-xs-alt
+              - details.drop(2).flatten.uniq.each do |line|
+                = line
+                %br/
+
+          .col1of6
+            .errvis.ui-container.rounded{ data: { hashviz_container: 'errvis' } }
+              %span.no-js= '?'
 
       .ui-modal-footer
         .ui-actions
