layouts: fix body nesting
updates styleguide refs because bottom padding changed

--- a/app/views/layouts/styleguide.haml
+++ b/app/views/layouts/styleguide.haml
@@ -10,28 +10,27 @@
   %title= 'Styleguide'
 
 - content_for(:body) do
-  %body.pbl
-    .wrapper
-      - if full_layout
-        %h1.sg-page-title.man
-          %a{href: styleguide_path}= 'Madek UI Elements'
-          %strong{style: 'width:6em;font-size: 0.5em;line-height: 2;'}
-            %a.weak{href: styleguide_path}
-              = git_hash
+  .wrapper.pbl
+    - if full_layout
+      %h1.sg-page-title.man
+        %a{href: styleguide_path}= 'Madek UI Elements'
+        %strong{style: 'width:6em;font-size: 0.5em;line-height: 2;'}
+          %a.weak{href: styleguide_path}
+            = git_hash
 
-        .bordered.ui-container.midtone.rounded.table.mbl
+      .bordered.ui-container.midtone.rounded.table.mbl
 
-          .app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-left.table-side
+        .app-body-sidebar.table-cell.bright.ui-container.bordered-right.rounded-left.table-side
 
-            .ui-container.rounded-left.phm.pvl
-              = content_for :toc if content_for? :toc
+          .ui-container.rounded-left.phm.pvl
+            = content_for :toc if content_for? :toc
 
-          .app-body-content.table-cell.table-substance.ui-container.pvl.pll.prm
-            = content
+        .app-body-content.table-cell.table-substance.ui-container.pvl.pll.prm
+          = content
 
-      - else # not full_layout -> plain layout
-        = content
+    - else # not full_layout -> plain layout
+      = content
 
-  -# = content_for(:scripts) do
+-# = content_for(:scripts) do
 
 = render template: 'layouts/_base'
