--- a/app/views/layouts/_base.haml
+++ b/app/views/layouts/_base.haml
@@ -29,12 +29,11 @@
 
     -# optional extra tags for head:
     = content_for(:head)
-
-  = content_for(:body)
-
-  -# - now all the per-template scripts, which
-      MUST be self-contained and not depending on load order:
-  = content_for(:scripts) if content_for?(:scripts)
+  %body
+    = content_for(:body)
+    -# - now all the per-template scripts, which
+        MUST be self-contained and not depending on load order:
+    = content_for(:scripts) if content_for?(:scripts)
 
   -# Implicit *yield*, don't put one here or it double-renders!
   -# Also, when in doubt use `content_for(:body)` in views.
