--- a/app/ui_elements/components/button.haml
+++ b/app/ui_elements/components/button.haml
@@ -1,7 +1,6 @@
 :ruby
   text ||= nil
   type ||= nil
-  html_tag = link ? 'a' : 'button'
   button_class = \
     case
     when classes.include?('button-primary') then 'primary-button'
@@ -17,8 +16,15 @@
     class: classes,
     type: type
     # data: { hook: defined?(hook) ? hook : nil }
-  }.merge(link.to_h)
+  }
 
+  ##################################################
+
+  html_tag, props = if link
+                      ['a', props.merge(href: link)]
+                    else
+                      ['button', props]
+                    end
 
 - haml_tag(html_tag, props) do
   = text
