ui: components: fix button
[closes #95143650]

adjust usage of 'link' property to how it should have been anyway.
also uses button-mod shortcut ("button.primary")

This reverts parts of commit "create media entry with file [#95143650]" (2b74c923795263badb8b5cab19fecb189f57ca60).

--- a/app/ui_elements/components/button.haml
+++ b/app/ui_elements/components/button.haml
@@ -1,6 +1,7 @@
 :ruby
   text ||= nil
   type ||= nil
+  html_tag = link ? 'a' : 'button'
   button_class = \
     case
     when classes.include?('button-primary') then 'primary-button'
@@ -17,14 +18,8 @@
     type: type
     # data: { hook: defined?(hook) ? hook : nil }
   }
+  props = props.merge(link) if link
 
-  ##################################################
-
-  html_tag, props = if link
-                      ['a', props.merge(href: link)]
-                    else
-                      ['button', props]
-                    end
 
 - haml_tag(html_tag, props) do
   = text
