--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -6,9 +6,8 @@
   = component('page-header',
               icon: component('icon.home'),
               text: 'My Archive',
-              actions: [component('button',
+              actions: [component('button.primary',
                                   link: new_media_entry_path,
-                                  mods: 'primary-button',
                                   text: 'Create media entry')])
 
 - content_for(:page_sidebar) do
