Admin interface: batch processing of media sets' permissions for users/groups

--- a/app/views/app_admin/groups/form_add_user.html.haml
+++ b/app/views/app_admin/groups/form_add_user.html.haml
@@ -1,6 +1,6 @@
 %h1 Add user
 
-= form_tag add_user_app_admin_group_path(@group), method: "POST", class: "form-horizontal autocomplete", role: "form" do
+= form_tag add_user_app_admin_group_path(@group), method: "POST", class: "form-horizontal user-autocomplete", role: "form" do
 
   = hidden_field nil, :user_id 
 
