upgrade settings (ui/db)

--- a/app/views/admin/app_settings/_setting_group.html.haml
+++ b/app/views/admin/app_settings/_setting_group.html.haml
@@ -1,26 +1,23 @@
-.row
-  .col-xs-12
-    .panel.panel-default
-      .panel-heading
-        .panel-title= setting_group 
-      .panel-body
-        %table.table.table-striped
-          %tbody
-            - if setting_group == 'Other'
-              %tr#sitemap
-                %td.col-xs-2 Sitemap
-                %td
-                  %pre= @app_settings.sitemap.to_yaml
-                %td.col-xs-1
-                  = link_to edit_admin_app_setting_path(:sitemap), class: 'btn btn-info btn-sm' do
-                    %span.glyphicon.glyphicon-edit
-                    Edit
-            - else
-              - settings.each do |attr|
-                %tr{id: attr}
-                  %td.col-xs-2= attr.to_s.humanize
-                  %td= @app_settings.send(attr)
-                  %td.col-xs-1
-                    = link_to edit_admin_app_setting_path(attr), class: 'btn btn-info btn-sm' do
-                      %span.glyphicon.glyphicon-edit
-                      Edit
+.panel.panel-default
+  .panel-heading
+    .panel-title= setting_group
+  .panel-body
+    %table.table.table-striped
+      %tbody
+        - settings.each do |attr, description|
+          %tr.row{id: attr}
+            %td.col-xs-2
+              = attr.to_s.titleize
+              %p.help-block= description
+
+            %td.col-xs-9
+              - type = AppSettings.columns_hash[attr.try(:to_s)].try(:sql_type)
+              - if type === 'jsonb'
+                %pre.col-xs-9= @app_settings.send(attr).to_yaml
+              - else
+                = @app_settings.send(attr)
+
+            %td.col-xs-1
+              = link_to edit_admin_app_setting_path(attr), class: 'btn btn-info btn-sm' do
+                %span.glyphicon.glyphicon-edit
+                Edit
