views: integrate AppSettings
- root: welcome (pitch/home claim)
- app: header; also add admin, help to nav
- app: footer
- markdownify: welcome_subtitle → welcome_text
- move zhdk-logo to /public
  - it is referenced by the defaults so it needs to be available on all instances

--- a/app/ui_elements/combos/home-claim.haml
+++ b/app/ui_elements/combos/home-claim.haml
@@ -7,8 +7,8 @@
     .pitch-claim
       %h1.title-xxl
         = claim[:title]
-      %h2.title-l
-        = claim[:subtitle]
+      .ptm
+        = claim[:subtitle] # markdowned, will have `<p>`s etc.
 
   .col1of3
     = login
