--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -181,3 +181,10 @@
 [data-view="application"][data-action="root"]
   .tab-content
     min-height: 220px
+
+//.ui-home-claim
+.pitch-claim
+  p, strong
+    @extend .title-l
+  p
+    font-weight: normal
