--- a/app/ui_elements/combos/footer.haml
+++ b/app/ui_elements/combos/footer.haml
@@ -1,11 +1,24 @@
 %footer.app-footer.ui-footer.ui-container.inverted
 
+  - if defined?(menu)
+    -# strange but JSON-safe format: `[{"Example Link" => "http://example.com"}]`
+    - menu = Hash[menu.map {|item| item.to_a.first}]
+
+    %ul.ui-footer-menu
+      - menu.map do |text, link|
+        %li
+          = component('link', href: link) do
+            = text
+
   - if defined?(copy)
     .ui-footer-copy
       -# - if copy[:logo].is_a?(Hash)
       -#   = component('link', href: copy[:logo][:link]) do
       -#     = copy[:logo][:content]
+
       %b{style: "font-weight: 600;font-family: \"Open Sans\";font-size: 16px;"}
         = "Madek"
       = version
+
+      = " — "
       = copy[:text]
