--- a/app/views/styleguide/08_Combos/_11_home-claim.html.haml
+++ b/app/views/styleguide/08_Combos/_11_home-claim.html.haml
@@ -7,7 +7,7 @@
     locals: {
       claim: {
         title: 'Bilder, Videos, Audio-Dateien und Dokumente',
-        subtitle: 'Diese Plattform dient dem gemeinschaftlichen Arbeiten mit Medien und dem Teilen von Inhalten.'
+        subtitle: markdown('**Diese Plattform dient dem gemeinschaftlichen Arbeiten mit Medien und dem Teilen von Inhalten.**')
       },
       login: nil # see below
     }
