ui: tiles: css fix

--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -93,21 +93,21 @@
   .ui-tile
     .ui-tile__image
       +dimension(auto, 200px)
-      min-width: auto
+      min-width: 0
 
   &.small
     height: 210px
     .ui-tile
       .ui-tile__image
         +dimension(auto, 125px)
-        min-width: auto
+        min-width: 0
 
   &.large
     height: 385px
     .ui-tile
       .ui-tile__image
         +dimension(auto, 300px)
-        min-width: auto
+        min-width: 0
 /* Layout switching
  *-----------------------------------------
 
