--- a/app/ui_elements/combos/home-claim.haml
+++ b/app/ui_elements/combos/home-claim.haml
@@ -7,8 +7,11 @@
     .pitch-claim
       %h1.title-xxl
         = claim[:title]
-      .ptm
-        = claim[:subtitle] # markdowned, will have `<p>`s etc.
+
+      - if (claim_text = claim.try(:[], :text).presence)
+        .ptm
+          -# markdowned, will have `<p>`s etc., careful with nesting:
+          = markdown(claim_text)
 
   .col1of3
     = login
