--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -1,11 +1,11 @@
-.ui-container.pal
-  :ruby
-    home_claim = {
-      claim: {
-        title: settings.welcome_title,
-        subtitle: markdown(settings.welcome_text)
-      },
-      login: render(partial: 'login_box')
-      }
+:ruby
+  home_claim = {
+    claim: {
+      title: settings.welcome_title,
+      text: settings.try(:welcome_text).presence
+    },
+    login: render(partial: 'login_box')
+  }
 
+.ui-container.pal
   = combo('home-claim', home_claim)
