Admin interface: add manage permission checkbox to a media set userpermission's form

--- a/app/views/app_admin/userpermissions/_children_permissions.html.haml
+++ b/app/views/app_admin/userpermissions/_children_permissions.html.haml
@@ -1,4 +1,4 @@
-- (Userpermission::ALLOWED_PERMISSIONS - [:manage]).each do |permission|
+- Userpermission::ALLOWED_PERMISSIONS.each do |permission|
   .checkbox
     %label
       = check_box_tag "children_#{scope}[#{permission}]"
