--- a/app/views/app_admin/userpermissions/_permissions.html.haml
+++ b/app/views/app_admin/userpermissions/_permissions.html.haml
@@ -1,4 +1,4 @@
-- (Userpermission::ALLOWED_PERMISSIONS - [:manage]).each do |permission|
+- Userpermission::ALLOWED_PERMISSIONS.each do |permission|
   .checkbox
     %label
       = f.check_box permission
