--- a/app/ui_elements/decorators/polybox.haml
+++ b/app/ui_elements/decorators/polybox.haml
@@ -24,82 +24,79 @@
   view_modes = [:grid, :tiles]
   classes.push :grid unless view_modes.any? {|mode| classes.include? mode }
 
-  # make thumbnails by type of IndexPresenter
-  media_resources = pres.media_resources.map do |get|
-      case
-      when get.is_a?(Presenters::MediaEntries::MediaEntryIndex)
-        deco('polythumb',
-          title: get.title,
-          thumb: component('thumbnail',
-            mods: ['media-entry'], # TODO : type of entry ('video')
-            text: get.title,
-            picture: get.image_url,
-            href: get.url,
-            # yes this is *inside* the thumb… workaround hacky CSS :/
-            meta: {
-              title: get.title,
-              subtitle: get.authors
-            },
-            badge_top_left: component('privacy-icon', status: get.privacy_status)
-          )
+  # check if we got any non-empty list
+  all_lists_are_empty = pres.empty?
+
+  # for each type of resource, build the list of polythumbs
+  resource_types = {
+    media_entries: pres.media_entries.map do |get|
+      deco('polythumb',
+        title: get.title,
+        thumb: component('thumbnail',
+          mods: ['media-entry'], # TODO : type of entry ('video')
+          text: get.title,
+          picture: get.image_url,
+          href: get.url,
+          # yes this is *inside* the thumb… workaround hacky CSS :/
+          meta: {
+            title: get.title,
+            subtitle: get.authors
+          },
+          badge_top_left: component('privacy-icon', status: get.privacy_status)
         )
-
-      when get.is_a?(Presenters::Collections::CollectionIndex)
-        deco('polythumb',
-          title: get.title,
-          thumb: component('thumbnail',
-            mods: ['media-set'],
-            text: get.title,
-            href: get.url,
-            picture: get.image_url,
-            meta: {
-              title: get.title#,
-              # subtitle: 'TODO'
-            },
-            badge_top_left: component('privacy-icon', status: get.privacy_status)
-          )
+      )
+    end,
+    collections: pres.collections.map do |get|
+      deco('polythumb',
+        title: get.title,
+        thumb: component('thumbnail',
+          mods: ['media-set'],
+          text: get.title,
+          href: get.url,
+          picture: get.image_url,
+          meta: {
+            title: get.title#,
+            # subtitle: 'TODO'
+          },
+          badge_top_left: component('privacy-icon', status: get.privacy_status)
         )
-
-      when get.is_a?(Presenters::FilterSets::FilterSetIndex)
-        deco('polythumb',
-          title: get.title,
-          thumb: component('thumbnail',
-            mods: ['filter-set'],
-            text: get.title,
-            href: get.url,
-            picture: get.image_url,
-            meta: {
-              title: get.title#,
-              # subtitle: 'TODO'
-            },
-            badge_top_left: component('privacy-icon', status: get.privacy_status),
-            badge_top_right: component('icon.filter')
-          )
+      )
+    end,
+    filter_sets: pres.filter_sets.map do |get|
+      deco('polythumb',
+        title: get.title,
+        thumb: component('thumbnail',
+          mods: ['filter-set'],
+          text: get.title,
+          href: get.url,
+          picture: get.image_url,
+          meta: {
+            title: get.title#,
+            # subtitle: 'TODO'
+          },
+          badge_top_left: component('privacy-icon', status: get.privacy_status),
+          badge_top_right: component('icon.filter')
         )
+      )
+    end
+  }
 
-      else
-        fail('unknown type of MediaResource!')
-      end
-
-  end
-
-  # # - build an appropriate filter_bar
-  # TODO: use sub-collection counts (static for now)
+  # also build an appropriate filter_bar
   filter_bar = combo('button-group', {
     mods: ['js-only', 'small'],
     list: [
-      {
+      (pres.media_entries.empty? ? nil : {
         text: 'Entries',
         hook: 'entries'
-      },
-      {
+      }),
+      (pres.collections.empty? ? nil : {
         text: 'Collections',
         hook: 'collections'
-      },
-      {
+      }),
+      (pres.filter_sets.empty? ? nil : {
         text: 'FilterSets',
         hook: 'filter_sets'
-      }
+      })
     ]
   })
 
@@ -119,30 +116,35 @@
   - rendered as consective units
   - re-uses pagination elements
   - TODO: ujs: use filterbar ui + tab logic
-  - TODO: ujs: pagination
-  - TODO: total_count, count by resource type
 
 .POLYBOX.pbl{id: elm_anchor}
   - if title
     = title
 
-  - return fallback if pres.empty?
+  - return fallback if all_lists_are_empty
 
   %ul.ui-resources{class: classes}
 
-    %li.ui-resources-page.mhn.mtn.pbm
+    - if show_pagination_nav && pagination.total_pages > 1
+      .no-js
+        %span.ui-resources-page-counter.ui-pager
+          = "Page #{pagination.current_page} of #{pagination.total_pages}"
 
-      - if show_pagination_nav && pagination.total_pages > 1
-        -# TODO: .no-js
-        %span.ui-resources-page-counter.ui-pager.small
-          = "Page #{pagination.current_page} of #{pagination.total_pages}, "
-          = "#{pagination.total_count} Resources total"
+    -# a unit for each type of resource
+    - resource_types.each do |type, resources_list|
+      - unless resources_list.empty?
+        %li.ui-resources-page.mhn.mtn.pbm
 
+          -# a small heading TODO: txt(), count
+          %span.ui-resources-page-counter.ui-pager.small
+            - count = pres.total_counts[type]
+            - name = count > 1 ? type : type.to_s.singularize
+            = "#{count} #{name.to_s.camelize}"
 
-      -# the actual box of items
-      %ul.ui-resources-page-items
-        - media_resources.each do |thumb|
-          = thumb
+          -# the actual box of items
+          %ul.ui-resources-page-items
+            - resources_list.each do |item|
+              = item
 
     - if show_pagination_nav && pagination.nav.any?
       .row
