ui: split combo/component tag-cloud/tag-button

--- a/app/ui_elements/decorators/meta_datum/keywords.haml
+++ b/app/ui_elements/decorators/meta_datum/keywords.haml
@@ -6,4 +6,4 @@
     }
   end
 
-= component('tag-cloud.label', mods: 'small.ellipsed', list: terms)
+= combo('tag-cloud.label', mods: 'small.ellipsed', list: terms)
