--- a/app/ui_elements/decorators/person-tag-list.haml
+++ b/app/ui_elements/decorators/person-tag-list.haml
@@ -15,4 +15,4 @@
   end
 
 
-= component('tag-cloud.person', mods: mods, list: person_list)
+= combo('tag-cloud.person', mods: mods, list: person_list)
