--- a/app/views/media_entries/show.html.haml
+++ b/app/views/media_entries/show.html.haml
@@ -20,7 +20,7 @@
                          ['Description', @get.description],
                          ['Copyright Notice', @get.copyright_notice],
                          ['Date', @get.portrayed_object_date],
-                         ['Keywords', component('tag-cloud.label',
+                         ['Keywords', combo('tag-cloud.label',
                             mods: tag_mods,
                             list: @get.keywords)]
                         ]
